--- a/playbooks/groups/retrace.yml
+++ b/playbooks/groups/retrace.yml
@@ -10,6 +10,8 @@
 
   tasks:
     - import_tasks: "{{ tasks_path }}/aws_cloud.yml"
+    - import_tasks: "{{ tasks_path }}/cloud_setup_basic.yml
+
 
 # fedora-messaging setup
 - name: setup RabbitMQ
