--- a/playbooks/openshift-apps/zezere.yml
+++ b/playbooks/openshift-apps/zezere.yml
@@ -24,7 +24,7 @@
     file: buildconfig.yml
   - role: openshift/start-build
     app: zezere
-    buildname: zezere
+    buildname: zezere-build
   - role: openshift/object
     app: zezere
     file: service.yml
