--- a/roles/openshift-apps/zezere/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/zezere/templates/deploymentconfig.yml
@@ -26,7 +26,7 @@ spec:
           - name: ALLOWED_HOSTS
             value: "*"
           - name: WEB_CONCURRENCY
-            value: 8
+            value: "8"
           - name: SECRET_KEY
             valueFrom:
               secretKeyRef:
