docstranslation: remove project if run with delete tag
Signed-off-by: Francois Andrieu <darknao@fedoraproject.org>

--- a/playbooks/openshift-apps/docstranslation.yml
+++ b/playbooks/openshift-apps/docstranslation.yml
@@ -74,12 +74,12 @@
 # actions to delete the project from OpenShift
 ###############################################
 # to run: sudo rbac-playbook -l os_masters_stg[0] -t delete openshift-apps/docstranslation.yml
-  - name: Delete cron jobs
+  - name: Delete project
     include_role:
       name: openshift/object-delete
     vars:
-      objecttype: cronjob
-      objectname: cron
+      objecttype: project
+      objectname: docstranslation
     tags:
     - never
     - delete
