bodhi: override dnf tsflags when installing docs
Signed-off-by: Mattia Verga <mattia.verga@protonmail.com>

--- a/roles/openshift-apps/bodhi/templates/dockerfile-base
+++ b/roles/openshift-apps/bodhi/templates/dockerfile-base
@@ -47,8 +47,7 @@ RUN dnf install -y \
     python3-mod_wsgi            \
     python3-gunicorn            \
     python3-whitenoise          \
-    && sed -i '/tsflags/d' /etc/dnf/dnf.conf \
-    && dnf install -y bodhi-docs \
+    && dnf --setopt='tsflags=' install -y bodhi-docs \
     && pip install koji graphene graphene-sqlalchemy WebOb-GraphQL \
     && dnf clean all
 
