proxy: do not use certbot for builds.coreos.fp.o
Signed-off-by: Clement Verna <cverna@tutanota.com>

--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -318,7 +318,7 @@
   - role: httpd/website
     site_name: "builds.coreos{{ env_suffix }}.fedoraproject.org"
     sslonly: true
-    certbot: true
+    certbot: false
     tags:
     - builds.coreos.fedoraproject.org
 
