proxy: looks like we need to setup the certname builds.coreos.fp.o
Signed-off-by: Clement Verna <cverna@tutanota.com>

--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -319,6 +319,7 @@
     site_name: "builds.coreos{{ env_suffix }}.fedoraproject.org"
     sslonly: true
     certbot: false
+    cert_name: "{{wildcard_cert_name}}"
     tags:
     - builds.coreos.fedoraproject.org
 
