--- a/roles/nagios_server/files/nagios/services/procs.cfg
+++ b/roles/nagios_server/files/nagios/services/procs.cfg
@@ -57,3 +57,10 @@ define service {
   use                   defaulttemplate
 }
 
+define service {
+  hostgroup             pagure 
+  service_description   Systemd Units
+  check_command         check_by_nrpe!check_systemd_units
+  use                   defaulttemplate
+}
+
