Configure HBAC rules for IPA clients
- Install a cluster-wide rule allowing sysadmin-main members to do
  anything, anywhere
- Disable the cluster-wide default `allow_all` rule
- Add host-based rules to give certain groups shell access

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -21,3 +21,11 @@
   tags:
     - ipa/client
     - config
+
+- name: Configure HBAC on IPA cluster
+  delegate_to: "{{ ipa_server }}"
+  import_tasks: hbac.yml
+  # don't muck with prod for now
+  when: env == 'staging'
+  tags:
+    - ipa/client
