Add missing ansible-freeipa package for CI
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/ci/ansible-review-base.yaml
+++ b/ci/ansible-review-base.yaml
@@ -1,8 +1,10 @@
 - hosts: all
   tasks:
-    - name: Install ansible-review
+    - name: Install packages
       package:
-        name: python3-ansible-review
+        name:
+          - ansible-freeipa
+          - python3-ansible-review
         state: latest
 
     - name: Install invocation script
