--- a/playbooks/groups/retrace.yml
+++ b/playbooks/groups/retrace.yml
@@ -22,7 +22,7 @@
 
   vars_files:
     - /srv/web/infra/ansible/vars/global.yml
-    - "/srv/private/ansible/vars.yml"
+    - /srv/private/ansible/vars.yml
     - /srv/web/infra/ansible/vars/{{ ansible_distribution }}.yml
 
   roles: 
