retrace: try dropping double quotes in non variables
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/retrace.yml
+++ b/playbooks/groups/retrace.yml
@@ -27,8 +27,8 @@
 
   roles: 
   - role: rabbit/queue
-    username: "faf"
-    queue_name: "faf"
+    username: faf
+    queue_name: faf
     routing_keys:
       - "org.fedoraproject.*.faf.report.threshold1"
       - "org.fedoraproject.*.faf.report.threshold10"
