pagure / staging: fix path to cert in 2 places.
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/pagure/templates/0_pagure.conf
+++ b/roles/pagure/templates/0_pagure.conf
@@ -93,7 +93,7 @@ WSGIDaemonProcess paguredocs user=git group=git maximum-requests=1000 display-na
 {% if env == 'pagure-staging' %}
   SSLCertificateFile /etc/pki/tls/certs/stg.pagure.io.cert
   SSLCertificateChainFile /etc/pki/tls/certs/stg.pagure.io.intermediate.cert
-  SSLCertificateKeyFile /etc/pki/tls/certs/stg.pagure.io.key
+  SSLCertificateKeyFile /etc/pki/tls/private/stg.pagure.io.key
 {% else %}
   SSLCertificateFile /etc/pki/tls/certs/pagure.io.cert
   SSLCertificateChainFile /etc/pki/tls/certs/pagure.io.intermediate.cert
@@ -218,7 +218,7 @@ WSGIDaemonProcess paguredocs user=git group=git maximum-requests=1000 display-na
   SSLEngine on
   SSLCertificateFile /etc/pki/tls/certs/stg.pagure.io.cert
   SSLCertificateKeyFile /etc/pki/tls/private/stg.pagure.io.key
-  SSLCertificateChainFile /etc/pki/tls/certs/stg.pagure.io.intermediate.cert
+  SSLCertificateChainFile /etc/pki/tls/private/stg.pagure.io.intermediate.cert
   SSLHonorCipherOrder On
   SSLProtocol {{ ssl_protocols }}
   SSLCipherSuite {{ ssl_ciphers }}
