pagure / production: add letsencrypt config for pagure.io ssl certs.
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/pagure/tasks/main.yml
+++ b/roles/pagure/tasks/main.yml
@@ -475,3 +475,18 @@
   tags:
   - pagure
   - letsencrypt
+
+- name: Letsencrypt for pagure.io
+  include_role: name=letsencrypt
+  vars:
+    site_name: pagure.io
+    server_aliases:
+    - releases.pagure.org
+    - docs.pagure.org
+    - pagure.org
+    - www.pagure.io
+    - lists.pagurio
+  when: env != 'pagure-staging'
+  tags:
+  - pagure
+  - letsencrypt
