pagure / production: fix typo
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/pagure/tasks/main.yml
+++ b/roles/pagure/tasks/main.yml
@@ -485,7 +485,7 @@
     - docs.pagure.org
     - pagure.org
     - www.pagure.io
-    - lists.pagurio
+    - lists.pagure.io
   when: env != 'pagure-staging'
   tags:
   - pagure
