--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -120,6 +120,47 @@ email_overrides_url = "https://pagure.io/fedora-infra/ansible/raw/master/f/roles
 pdc_active_branches = "https://pdc.fedoraproject.org/extras/active_branches.json"
 
 
+[consumer_config.distgit_bugzilla_sync]
+# Sent notifications e-mails about errors to users
+# If False the notificaton e-mail is sent only to admins
+user_notifications = false
+# FAS username of default QA contact for bugzilla tickets
+# default_qa_contact = "extras-qa@fedoraproject.org"
+# Admin addresses to notify
+notify_admins = [
+    "kevin@fedoraproject.org",
+    "pingou@fedoraproject.org",
+]
+# Use fasjson instead of FAS
+fasjson = false
+
+# PDC types mapping for distgit_bugzilla_sync toddler
+[consumer_config.distgit_bugzilla_sync.pdc_types]
+"rpms" = "rpm"
+"modules" = "module"
+"container" = "container"
+
+# Bugzilla products informations for Fedora
+[consumer_config.distgit_bugzilla_sync.products]
+
+[consumer_config.distgit_bugzilla_sync.products.Fedora]
+namespace = "rpms"
+versions = ["rawhide", "33", "32"]
+
+[consumer_config.distgit_bugzilla_sync.products."Fedora Container Images"]
+namespace = "container"
+versions = ["rawhide", "33", "32"]
+
+[consumer_config.distgit_bugzilla_sync.products."Fedora Modules"]
+namespace = "modules"
+versions = []
+
+[consumer_config.distgit_bugzilla_sync.products."Fedora EPEL"]
+# To simplify to '^epel\d+$' once EL6 is EOL.
+branch_regex = '^e(pe)?l\d+$'
+versions = ["epel8", "epel7", "el6"]
+
+
 
 [qos]
 prefetch_size = 0
