toddlers: Add a missing configuration key: kojipkgs_url
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -74,6 +74,9 @@ bugzilla_group = "fedora_contrib"
 # Base URL for the Koji build system
 koji_url = "https://koji{{ env_suffix }}.fedoraproject.org"
 
+# Base URL for the Koji package db
+kojipkgs_url = "https://kojipkgs.fedoraproject.org"
+
 # Account to use to connect to Pagure-as-dist-git
 dist_git_url = "https://src{{ env_suffix }}.fedoraproject.org"
 dist_git_token_seed = "private random string to change"
