toddlers: increase the logging for distgit_bugzilla_sync
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -216,6 +216,11 @@ level = "DEBUG"
 propagate = false
 handlers = ["console"]
 
+[log_config.loggers.toddlers.plugins.distgit_bugzilla_sync]
+level = "DEBUG"
+propagate = false
+handlers = ["console"]
+
 [log_config.root]
 level = "ERROR"
 handlers = ["console"]
