--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -206,6 +206,11 @@ level = "INFO"
 propagate = false
 handlers = ["console"]
 
+[log_config.loggers.toddlers.utils.bugzilla_system]
+level = "DEBUG"
+propagate = false
+handlers = ["console"]
+
 [log_config.loggers.toddlers.plugins.pdc_retired_packages]
 level = "DEBUG"
 propagate = false
