--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -202,7 +202,7 @@ handlers = ["console"]
 
 # Toddlers logger, feel free to bump the level to DEBUG if you need to
 [log_config.loggers.toddlers]
-level = "INFO"
+level = "DEBUG"
 propagate = false
 handlers = ["console"]
 
