toddlers: build from the debug branch for now
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/buildconfig.yml
+++ b/roles/openshift-apps/toddlers/templates/buildconfig.yml
@@ -16,7 +16,7 @@ spec:
 {% if env == 'staging' %}
       ref: "staging"
 {% else %}
-      ref: "production"
+      ref: "debug"
 {% endif %}
   strategy:
     type: Docker
