rabbitmq / centos-odcs: we need a centos-odcs user
This was hidden away in the odcs playbook in fedora infra, so I missed
that we didn't make it in the odcs role, which is where we copied the
things for the centos odcs application. So, add it in there so it makes
a centos-odcs user.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/rabbitmq_cluster/tasks/apps.yml
+++ b/roles/rabbitmq_cluster/tasks/apps.yml
@@ -232,4 +232,17 @@
     state: present
   tags:
   - centos-odcs
+
+- name: Create the user in RabbitMQ
+  delegate_to: "{{ rabbitmq_server }}"
+  rabbitmq_user:
+    user: centos-odcs
+    vhost: "{{ vhost }}"
+    read_priv: "^$"  # Publish only, no reading
+    write_priv: "amq\\.topic"
+    configure_priv: "^$"  # No configuration permissions
+    state: present
+  tags:
+  - centos-odcs
+
 # CENTOS ODCS END
