pagure: install python3-pagure-messages on the host
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/pagure/tasks/main.yml
+++ b/roles/pagure/tasks/main.yml
@@ -11,6 +11,7 @@
   - pagure-milters
   - pagure-webhook
   - pagure-theme-pagureio
+  - python3-pagure-messages
   - python3-psycopg2
   - python3-pygments
   - redis
