--- a/roles/pagure/tasks/main.yml
+++ b/roles/pagure/tasks/main.yml
@@ -88,6 +88,8 @@
                owner=git group=git mode=0755
   tags:
   - pagure
+  - fix_log
+  - hotfix
 
 # This now fails when there are broken symlinks. Lets figure out a better way to do this - kevin
 #- name: Adjust owner of /srv/git
