--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -19,16 +19,16 @@ var.state_dir   = "/var/run"
 var.home_dir    = "/var/lib/lighttpd"
 var.conf_dir    = "/etc/lighttpd"
 
-## 
+##
 ## run the server chrooted.
-## 
+##
 ## This requires root permissions during startup.
 ##
 ## If you run Chrooted set the the variables to directories relative to
 ## the chroot dir.
 ##
 ## example chroot configuration:
-## 
+##
 #var.log_root    = "/logs"
 #var.server_root = "/"
 #var.state_dir   = "/run"
@@ -82,7 +82,9 @@ server.modules = (
   "mod_redirect",
   "mod_rewrite",
   "mod_indexfile",
-  "mod_cgi"
+  "mod_cgi"{% if devel %},
+  "mod_openssl"
+{% endif %}
 )
 
 cgi.assign = ( ".pl"  => "/usr/bin/perl",
@@ -114,12 +116,12 @@ server.use-ipv6 = "disable"
 
 ##
 ## Run as a different username/groupname.
-## This requires root permissions during startup. 
+## This requires root permissions during startup.
 ##
 server.username  = "lighttpd"
 server.groupname = "lighttpd"
 
-## 
+##
 ## enable core files.
 ##
 #server.core-files = "disable"
@@ -156,14 +158,14 @@ server.pid-file = state_dir + "/lighttpd.pid"
 server.errorlog             = log_root + "/error.log"
 
 ##
-## If you want to log to syslog you have to unset the 
+## If you want to log to syslog you have to unset the
 ## server.errorlog setting and uncomment the next line.
 ##
 #server.errorlog-use-syslog = "enable"
 
 ##
 ## Access log config
-## 
+##
 include "conf.d/access_log.conf"
 
 ##
@@ -198,7 +200,7 @@ server.event-handler = "linux-sysepoll"
 ##
 ## The basic network interface for all platforms at the syscalls read()
 ## and write(). Every modern OS provides its own syscall to help network
-## servers transfer files as fast as possible 
+## servers transfer files as fast as possible
 ##
 ## linux-sendfile - is recommended for small files.
 ## writev         - is recommended for sending many large files
@@ -243,7 +245,7 @@ server.max-connections = 1024
 
 ##
 ## How many seconds to keep a keep-alive connection open,
-## until we consider it idle. 
+## until we consider it idle.
 ##
 ## Default: 5
 ##
@@ -279,7 +281,7 @@ server.max-keep-alive-idle = 2
 #server.max-write-idle = 360
 
 ##
-##  Traffic Shaping 
+##  Traffic Shaping
 ## -----------------
 ##
 ## see /usr/share/doc/lighttpd/traffic-shaping.txt
@@ -288,7 +290,7 @@ server.max-keep-alive-idle = 2
 ##
 ## Keep in mind that a limit below 32kB/s might actually limit the
 ## traffic to 32kB/s. This is caused by the size of the TCP send
-## buffer. 
+## buffer.
 ##
 ## per server:
 ##
@@ -376,7 +378,7 @@ include "conf.d/dirlisting.conf"
 
 ##
 ## Should lighttpd follow symlinks?
-## 
+##
 server.follow-symlink = "enable"
 
 ##
@@ -396,7 +398,7 @@ server.upload-dirs = ( "/var/tmp" )
 #######################################################################
 ##
 ##  SSL Support
-## ------------- 
+## -------------
 ##
 ## To enable SSL for the whole server you have to provide a valid
 ## certificate and have to enable the SSL engine.::
@@ -461,6 +463,8 @@ server.upload-dirs = ( "/var/tmp" )
 ##
 #######################################################################
 
+{% if not devel %}
+# production still uses normal configuration
 $SERVER["socket"] == ":443" {
   ssl.engine = "enable"
   ssl.pemfile = "/etc/lighttpd/copr.fedorainfracloud.org.pem"
@@ -470,6 +474,38 @@ $SERVER["socket"] == ":443" {
   ssl.use-sslv3 = "disable"
   ssl.cipher-list             = "ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4-SHA:RC4:HIGH:!MD5:!aNULL:!EDH:!AESGCM"
 }
+{% else %}
+# devel runs on letsencrypt
+
+
+# Used for letsencrypt validation
+$HTTP["url"] =~ "^/.well-known/" {
+    dir-listing.activate = "enable"
+}
+
+# Enable HTTPS
+$SERVER["socket"] == ":443" {
+    ssl.engine              = "enable"
+{% for hostname, _ in letsencrypt.certificates.items()  %}
+    ssl.ca-file             = "/etc/letsencrypt/live/{{ hostname }}/chain.pem"
+    ssl.pemfile             = "/etc/letsencrypt/live/{{ hostname }}/combined.pem"
+{% endfor %}
+    ssl.honor-cipher-order  = "enable"
+    # The following is OPTIONAL
+    ssl.cipher-list         = "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:ECDHE-RSA-AES128-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA128:DHE-RSA-AES128-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA128:ECDHE-RSA-AES128-SHA384:ECDHE-RSA-AES128-SHA128:ECDHE-RSA-AES128-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES128-SHA128:DHE-RSA-AES128-SHA128:DHE-RSA-AES128-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA384:AES128-GCM-SHA128:AES128-SHA128:AES128-SHA128:AES128-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4"
+    ssl.use-compression     = "disable"
+    ssl.use-sslv2           = "disable"
+    ssl.use-sslv3           = "disable"
+}
+
+
+# Force HTTPS
+$SERVER["socket"] == ":80" {
+    url.redirect = (
+        "^/(.*)" => "https://copr-be-dev.cloud.fedoraproject.org/$1"
+    )
+}
+{% endif %}
 
 url.redirect               = ( "^/results/sgallagh/cockpit-preview/(.+)" => "/results/@cockpit/cockpit-preview/$1" )
 
