--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -112,6 +112,7 @@ EXTERNAL_COMMITTER = {
 SSH_ACCESS_GROUPS = ["packager"]
 BYPASS_PR_ONLY_GROUPS = ["provenpackager"]
 ALLOW_API_UPDATE_GIT_TAGS = False
+GIT_DEFAULT_BRANCH = "rawhide"
 
 {% if env == "staging" %}
 ACL_DEBUG = True
