--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -78,6 +78,7 @@ var.socket_dir  = home_dir + "/sockets"
 #include "modules.conf"
 server.modules = (
   "mod_access",
+  "mod_magnet",
   "mod_setenv",
   "mod_redirect",
   "mod_rewrite",
@@ -528,7 +529,7 @@ server.max-worker = 6 # this may break many things
 $HTTP["url"] !~ "^/archive/spacewalk($|/)" {
   accesslog.filename = "|/usr/sbin/cronolog /var/log/lighttpd/access.log"
   $HTTP["url"] =~ "\.log\.gz$" {
-    setenv.add-response-header  = ( "Content-Encoding" => "gzip")
+    magnet.attract-physical-path-to = ( "/etc/lighttpd/content-encoding-gzip-if-exists.lua" )
     mimetype.assign = ("" => "text/plain" )
   }
 }
