copr: backend: redirect backend.log to backend.log.gz when not found

--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -511,9 +511,12 @@ $SERVER["socket"] == ":80" {
 url.redirect               = ( "^/results/sgallagh/cockpit-preview/(.+)" => "/results/@cockpit/cockpit-preview/$1" )
 
 url.redirect += ( "^/results/(.*)/(.*)/mageia-(.*)-i386(.*)" => "/results/$1/$2/mageia-$3-i586$4" )
-url.redirect += ( "^/(.*)/redirect-live.log$"                => "/$1/builder-live.log.gz" )
 
-url.rewrite-if-not-file = ("^/(.*)/builder-live.log$" => "/$1/redirect-live.log")
+url.redirect += ( "^/(.*)/redirect-builder-live.log$" => "/$1/builder-live.log.gz" )
+url.rewrite-if-not-file = ("^/(.*)/builder-live.log$" => "/$1/redirect-builder-live.log")
+
+url.redirect += ( "^/(.*)/redirect-backend.log$" => "/$1/backend.log.gz" )
+url.rewrite-if-not-file += ("^/(.*)/backend.log$" => "/$1/redirect-backend.log")
 
 $HTTP["url"] =~ "^/archive/spacewalk($|/$)" {
   dir-listing.activate = "disable"
