--- a/roles/docker-distribution/tasks/main.yml
+++ b/roles/docker-distribution/tasks/main.yml
@@ -50,6 +50,6 @@
 - name: override the default syslog logrotate file
   copy:
     src=syslog-logrotate
-    dest=/etc/logrotate.d/syslog
+    dest=/etc/logrotate.d/rsyslog
   tags:
   - docker-distribution
