roles/distgit/pagure: Enable 'commit' ACL for API tokens
This permits users to create API tokens that have the ability to
commit to repositories through HTTPS. This is especially useful for
non-packagers that are trying to contribute through pull requests,
because they lack the normal packager SSH permissions.

Signed-off-by: Neal Gompa <ngompa13@gmail.com>

--- a/roles/distgit/pagure/templates/pagure.cfg
+++ b/roles/distgit/pagure/templates/pagure.cfg
@@ -233,6 +233,7 @@ ACLS = {
     'commit_flag': 'Flag a commit',
     "update_watch_status": "Update the watch status on a project",
     "tag_project": "Allows adding git tags to a project",
+    "commit": "Commit to a git repository via http(s)",
 }
 
 REQUIRED_GROUPS = {
@@ -263,6 +264,7 @@ USER_ACLS = [
     'pull_request_merge',
     'modify_project',
     'update_watch_status',
+    'commit',
 ]
 
 CROSS_PROJECT_ACLS = [
@@ -273,6 +275,7 @@ CROSS_PROJECT_ACLS = [
     'pull_request_merge',
     'pull_request_flag',
     'update_watch_status',
+    'commit',
 ]
 
 ADMIN_API_ACLS = [
