--- a/roles/pagure/templates/0_pagure.conf
+++ b/roles/pagure/templates/0_pagure.conf
@@ -218,7 +218,7 @@ WSGIDaemonProcess paguredocs user=git group=git maximum-requests=1000 display-na
   SSLEngine on
   SSLCertificateFile /etc/pki/tls/certs/stg.pagure.io.cert
   SSLCertificateKeyFile /etc/pki/tls/private/stg.pagure.io.key
-  SSLCertificateChainFile /etc/pki/tls/private/stg.pagure.io.intermediate.cert
+  SSLCertificateChainFile /etc/pki/tls/certs/stg.pagure.io.intermediate.cert
   SSLHonorCipherOrder On
   SSLProtocol {{ ssl_protocols }}
   SSLCipherSuite {{ ssl_ciphers }}
@@ -227,7 +227,7 @@ WSGIDaemonProcess paguredocs user=git group=git maximum-requests=1000 display-na
   SSLEngine on
   SSLCertificateFile /etc/pki/tls/certs/pagure.io.cert
   SSLCertificateKeyFile /etc/pki/tls/private/pagure.io.key
-  SSLCertificateChainFile /etc/pki/tls/private/pagure.io.intermediate.cert
+  SSLCertificateChainFile /etc/pki/tls/certs/pagure.io.intermediate.cert
   SSLHonorCipherOrder On
   SSLProtocol {{ ssl_protocols }}
   SSLCipherSuite {{ ssl_ciphers }}
