--- a/roles/openshift-apps/toddlers/templates/email_overrides.toml
+++ b/roles/openshift-apps/toddlers/templates/email_overrides.toml
@@ -1,1 +1,135 @@
-../../distgit-bugzilla-sync/templates/email_overrides.toml
+# This file contains the list of FAS email addresses to override for bugzilla.
+# By default we expect that the email address set in FAS corresponds to
+# the bugzilla account of the person.
+# However, some people prefer to use different addresses in FAS and in
+# bugzilla (for example if they want to use their @fedoraproject alias in
+# bugzilla). To support these requests, this file maps FAS email addresses to
+# Bugzilla email addresses where they differ.
+#
+# Example:
+# "foo@bar.com" = "bar@foo.org"
+
+# Control Center Team: Bugzilla user but email doesn"t exist
+# 9908: "control-center-maint@redhat.com"
+# Matt Domsch"s rebuild script -- bz email goes to /dev/null
+# 103590: "ftbfs@fedoraproject.org"
+
+
+# /!\ WARNING: do not use templating instructions in this file
+#     while being in a template folder it is loaded/processed as
+#     a plain file by toddlers. Adding templating instructions here
+#     will break toddlers!
+
+
+# icon - Konstantin Ryabitsev
+"mricon@gmail.com" = "icon@fedoraproject.org"
+# jafo - Sean Reifschneider
+"jafo@tummy.com" = "jafo-redhat@tummy.com"
+# meme - Karen Pease
+"karen-pease@uiowa.edu" = "meme@daughtersoftiresias.org"
+# robert - Robert Scheck
+"redhat@linuxnetz.de" = "redhat-bugzilla@linuxnetz.de"
+# byte - Colin Charles:
+"byte@aeon.com.my" = "byte@fedoraproject.org"
+# mikep - W. Michael Petullo:
+"mike@flyn.org" = "redhat@flyn.org"
+# sopwith - Elliot Lee:
+"sopwith+fedora@gmail.com" = "sopwith@redhat.com"
+# duffy - Máirín Duffy
+"fedora@linuxgrrl.com" = "duffy@redhat.com"
+# mdious - Muray McAllister:
+"murray.mcallister@gmail.com" = "mmcallis@redhat.com"
+# sindrepb - Sindre Pedersen Bjørdal:
+"foolish@fedoraforum.org" = "sindrepb@fedoraproject.org"
+# jmrodri - Jesus M. Rodriguez:
+"jmrodri@gmail.com" = "jesusr@redhat.com"
+# mdehaan - Michael DeHaan:
+"michael.dehaan@gmail.com" = "mdehaan@redhat.com"
+# sebastian - Sebastian Gosenheimer:
+"sgosenheimer@googlemail.com" = "sebastian.gosenheimer@proio.com"
+# jmccann - William Jon McCann:
+"william.jon.mccann@gmail.com" = "jmccann@redhat.com"
+# ceski - Davide Cescato:
+"davide.cescato@iaeste.ch" = "ceski@fedoraproject.org"
+# nb - Nick Bebout:
+"nick@bebout.net" = "nb@fedoraproject.org"
+# arxs - Niels Haase:
+"haase.niels@gmail.com" = "arxs@fedoraproject.org"
+# thomasj - Thomas Janssen:
+"th.p.janssen@googlemail.com" = "thomasj@fedoraproject.org"
+# mjg - Michael J Gruber:
+"michaeljgruber+fedoraproject@gmail.com" = "mjg@fedoraproject.org"
+# nushio - Juan Manuel Rodriguez Moreno:
+"nushio@gmail.com" = "nushio@fedoraproject.org"
+# cagney - Andrew Cagney:
+"andrew.cagney@gmail.com" = "cagney@fedoraproject.org"
+# katzj - Jeremy Katz:
+"jeremy@katzbox.net" = "katzj@fedoraproject.org"
+# dmaphy - Dominic Hopf:
+"dmaphy@googlemail.com" = "dmaphy@fedoraproject.org"
+# cwickert - Christoph Wickert:
+"christoph.wickert@gmail.com" = "cwickert@fedoraproject.org"
+# tomspur - Thomas Spura:
+"thomas.spura@googlemail.com" = "tomspur@fedoraproject.org"
+# maxamillion - Adam Miller:
+"maxamillion@gmail.com" = "admiller@redhat.com"
+# gholms - Garrett Holmstrom:
+"garrett.holmstrom@gmail.com" = "gholms@fedoraproject.org"
+# taljurf - Tareq Al Jurf:
+"taljurf.fedora@gmail.com" = "taljurf@fedoraproject.org"
+# jokajak - Josh Kayse:
+"jokajak@gmail.com" = "jokajak@fedoraproject.org"
+# behdad - Behdad Esfahbod:
+"fedora@behdad.org" = "behdad@fedoraproject.org"
+# dbruno - Daniel Bruno:
+"danielbrunos@gmail.com" = "dbruno@fedoraproject.org"
+# bethlynn - Beth Lynn Eicher:
+"bethlynneicher@gmail.com" = "bethlynn@fedoraproject.org"
+# sheltren - Jeff Sheltren:
+"jeff@tag1consulting.com" = "sheltren@fedoraproject.org"
+# jwboyer - Josh Boyer:
+"jwboyer@gmail.com" = "jwboyer@redhat.com"
+# mattdm - Matthew Miller:
+"mattdm@mattdm.org" = "mattdm@redhat.com"
+# jamielinux - Jamie Nguyen:
+"j@jamielinux.com" = "jamielinux@fedoraproject.org"
+# comzeradd - Nikos Roussos:
+"nikos@roussos.cc" = "comzeradd@fedoraproject.org"
+# ib54003- Benedikt Schäfer:
+"b.schaefer@flieden.org" = "ib54003@fedoraproject.org"
+# codeblock - Ricky Elrod:
+"codeblock@elrod.me" = "relrod@redhat.com"
+# fschwarz - Felix Schwarz:
+"felix.schwarz@oss.schwarz.eu" = "fschwarz@fedoraproject.org"
+# jdulaney - John Dulaney:
+"jdulaney@gnu.org" = "jdulaney@fedoraproject.org"
+# devos - Niels de Vos:
+"niels@nixpanic.net" = "ndevos@redhat.com"
+# shawndwells - Shawn Wells:
+"shawn@redhat.com" = "swells@redhat.com"
+# ctubbsii - Christopher Tubbs:
+"ctubbsii+fedora@gmail.com" = "ctubbsii@fedoraproject.org"
+# besser82 - Björn Esser:
+"besser82.fpo@gmail.com" = "besser82@fedoraproject.org"
+# mjw - Mark Wielard:
+"fedora@wildebeest.org" = "mjw@fedoraproject.org"
+# lef - Benjamin Lefoul:
+"benjamin.lefoul@uu.se" = "lef@fedoraproject.org"
+# roshi - Mike Ruckman:
+"roshi@mykolab.com" = "roshi@fedoraproject.org"
+# dustymabe - Dusty Mabe:
+"dusty@dustymabe.com" = "dustymabe@redhat.com"
+# jbwillia - Ben Williams:
+"vaioof@gmail.com" = "jbwillia@math.vt.edu"
+# dwd - David Dykstra:
+"dwd@fnal.gov" = "dwd@fedoraproject.org"
+# thofmann - Till Hofmann:
+"till.hofmann@posteo.de" = "thofmann@fedoraproject.org"
+# pkfed - Philip Kovacs:
+"phil@mxbits.io" = "pkfed@fedoraproject.org"
+# marcdeop - Marc Deop i Argemí:
+"fedora@marcdeop.com" = "marcdeop@fedoraproject.org"
+# etingof
+"etingof@gmail.com" = "ietingof@redhat.com"
+# ekulik
+"ernestas.kulik+fedoraproject@gmail.com" = "ekulik@fedoraproject.org"
