distgit/pagure: show 7 characters when showing the short hash of commits
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -113,6 +113,7 @@ SSH_ACCESS_GROUPS = ["packager"]
 BYPASS_PR_ONLY_GROUPS = ["provenpackager"]
 ALLOW_API_UPDATE_GIT_TAGS = False
 GIT_DEFAULT_BRANCH = "rawhide"
+SHORT_LENGTH = 7
 
 {% if env == "staging" %}
 ACL_DEBUG = True
