letsencrypt: delegate the cli.ini file to certgetter01
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/letsencrypt/tasks/main.yml
+++ b/roles/letsencrypt/tasks/main.yml
@@ -1,4 +1,5 @@
 - name: setup defaults file
+  delegate_to: "certgetter01.iad2.fedoraproject.org"
   copy: >
     dest=/etc/letsencrypt/cli.ini
     src=cli.ini
