--- a/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
+++ b/roles/openshift-apps/release-monitoring/templates/buildconfig.yml
@@ -64,8 +64,9 @@ items:
                 pushd anitya_schema && \
                 pip-3 install . && \
                 popd && \
-                popd && \
-                rm -rf anitya
+                popd
+#                popd && \
+#                rm -rf anitya
         # Let's use staging auth server in staging
 {% if env == 'staging' %}
         RUN sed -i 's/id.fedoraproject.org/id.stg.fedoraproject.org/g' /usr/lib/python3.8/site-packages/social_core/backends/fedora.py
