--- a/roles/koji_hub/tasks/main.yml
+++ b/roles/koji_hub/tasks/main.yml
@@ -420,12 +420,12 @@
   - service
   - koji_hub
 
-- name: Make sure kojira is set to not run on boot (controlled by keepalived)
-  service: name=kojira enabled=no
+- name: Make sure kojira is set to run on boot 
+  service: name=kojira enabled=yes
   tags:
   - service
   - koji_hub
-  when: env != 'staging' and ansible_hostname.startswith('koji')
+  when: ansible_hostname.startswith('koji02')
 
 - name: install koji-gc.conf
   template: src=koji-gc.conf.j2 dest=/etc/koji-gc/koji-gc.conf
